--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <div id="loginScreen">
             <div class="hero">
                 <h1>🏥 Второ мислење</h1>
-                <p>Moderna платформа за добивање професионални медицински совети од лиценцирани лекари</p>
+                <p>Платформа за добивање професионални медицински совети од лиценцирани лекари</p>
             </div>
 
             <div class="login-wrapper">
