--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="form-label">Шифра</label>
+                        <label class="form-label">Лозинка</label>
                         <input type="password" class="form-input" id="loginPassword" placeholder="••••••••">
                     </div>
 
@@ -352,12 +352,12 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="form-label">Шифра *</label>
+                        <label class="form-label">Лозинка *</label>
                         <input type="password" class="form-input" id="regPassword" placeholder="Минимум 8 знаци">
                     </div>
 
                     <div class="form-group">
-                        <label class="form-label">Потврди шифра *</label>
+                        <label class="form-label">Потврди лозинка *</label>
                         <input type="password" class="form-input" id="regPasswordConfirm" placeholder="Повторете ја шифрата">
                     </div>
 
